inin_cluster/k8s_deployment/zenoh-router.yaml
#apiVersion: "autoscaling.k8s.io/v1"
#kind: VerticalPodAutoscaler
#metadata:
#  name: zenoh-vpa
#spec:
  # recommenders field can be unset when using the default recommender.
  # When using an alternative recommender, the alternative recommender's name
  # can be specified as the following in a list.
  # recommenders: 
  #   - name: 'alternative'
#  targetRef:
#    apiVersion: "apps/v1"
#    kind: Deployment
#    name: zenoh
#  resourcePolicy:
#    containerPolicies:
#      - containerName: '*'
#        minAllowed:
#          cpu: 2
#          memory: 500Mi
#        maxAllowed:
#          cpu: 8
#          memory: 30Gi
#        controlledResources: ["cpu", "memory"]
#---
kind: Service
apiVersion: v1
metadata:
  name: zenoh
  labels:
    app: zenoh
spec:
  type: NodePort
  ports:
  - name: zenoh-protocol
    protocol: TCP
    port: 7447    
    nodePort: 30447 #$NODE_PORT
  - name: zenoh-api
    protocol: TCP
    port: 8000
    nodePort: 30450  
  - name: zenoh-quic
    protocol: UDP
    port: 7448    
    nodePort: 30452 #$NODE_PORT  
  - name: zenoh-tls
    protocol: TCP
    port: 7449    
    nodePort: 30449 #$NODE_PORT  
  selector:
    name: zenoh
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zenoh-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: zenoh
  template:
    metadata:
      name: zenoh
      labels:
        name: zenoh
    spec:
      volumes:
        - name: tls-zenoh-config
          configMap:
            name: tls-zenoh
            items:
            - key: key.pem
              path: key.pem
            - key: cert.pem
              path: cert.pem
        - name: router-zenoh-config
          configMap:
            name: zenoh-router-config
            items:
            - key: router-conf.json5
              path: router-conf.json5
      # runtimeClassName: "nvidia"
      containers:
      - name: zenoh
        image: eclipse/zenoh:1.0.2 #eclipse/zenoh::1.0.2 #eclipse/zenoh:0.11.0 #eclipse/zenoh:0.11.0-rc.3 version for ros rmw  #eclipse/zenoh:0.11.0 version for demo tb2 
        ports:
        - containerPort: 7447
          protocol: TCP
          name: zenoh-protocol
        - containerPort: 8000
          protocol: TCP
          name: zenoh-api
        - containerPort: 7448
          protocol: UDP
          name: zenoh-quic
        - containerPort: 7449
          protocol: TCP
          name: zenoh-tls
        resources:
          requests:
            cpu: "0.2"
            memory: 2Gi
        volumeMounts:
        - name: tls-zenoh-config
          mountPath: /key.pem
          subPath: key.pem
        - name: tls-zenoh-config
          mountPath: /cert.pem
          subPath: cert.pem
        - name: router-zenoh-config
          mountPath: /router-conf.json5
          subPath: router-conf.json5
        args:
        - "-c router-conf.json5"
        #- "-l tcp/0.0.0.0:7447"
        - "--cfg=connect/timeout_ms:1000"
        - "--cfg=connect/exit_on_failure:false"
