inin_cluster/k8s_deployment/foxglove-zenoh_vo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fxg-zenoh-bridges-vo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: foxglove-zenoh-bridges-vo
  template:
    metadata:
      name: foxglove-zenoh-bridges-vo
      labels:
        name: foxglove-zenoh-bridges-vo
    spec:
      volumes:
        - name: foxglove-config-vo
          configMap:
            name: foxglove-demo-vo
            items:
            - key: default-layout.json
              path: default-layout.json
      hostname: "foxglove-zenoh-bridges-vo"
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "foxglove-zenoh-bridges-vo"
      - ip: "192.168.100.1"
        hostnames:
        - "foxglove-demo-vo.robopaas.dev"
        - "nginx-vo2.robopaas.dev"
        - "nginx-vo1.robopaas.dev"
        - "bridges-vo.robopaas.dev"
      containers:
      - name: foxglove-zenoh-bridges-vo-container       
        image: robopaas/foxglove-zenoh-bridges:inin
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "1"
          limits:
            memory: "512Mi"
            cpu: "1"        
        command:
         - /run_bridge.sh
        ports:
        - containerPort: 8765
          name: fxg-ws
        - containerPort: 8080
          name: fxg-std
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
          privileged: true
      - name: fxg-std    
        image: robopaas/foxglove-studio:latest 
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "1"
          limits:
            memory: "512Mi"
            cpu: "1"      
        ports:
        - containerPort: 8080
          name: fxg-std
        volumeMounts:
        - name: foxglove-config-vo
          mountPath: /foxglove/default-layout.json
          subPath: default-layout.json
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
          privileged: true
---
apiVersion: v1
kind: Service
metadata:
  name: foxglove-zenoh-bridges-vo
spec:
  clusterIP: None
  ports:
    - name: fxg-ws
      port: 8765
      protocol: TCP
    - name: webgui
      port: 8080
      targetPort: 8080
  selector:
    name: foxglove-zenoh-bridges-vo
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foxglove-zenoh-bridges-vo-ingress
  labels:
    name: foxglove-zenoh-bridges-vo
spec:
  rules:
  - host: bridges-vo.robopaas.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foxglove-zenoh-bridges-vo
            port:
              number: 8765
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foxglove-ingress-vo
  labels:
    name: foxglove-zenoh-bridges-vo
spec:
  rules:
  - host: foxglove-demo-vo.robopaas.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foxglove-zenoh-bridges-vo
            port:
              number: 8080
---
