inin_cluster/k8s_deployment/inria.yaml
---
# Source: nephele-uc1-inria-app/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "inria-api"
spec:
  ports:
  - port: 5001
    targetPort: 5001
  selector:
    app: "inria-api"
---
# Source: nephele-uc1-inria-app/templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: db
---
# Source: nephele-uc1-inria-app/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "inria-front"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: "inria-front"
---
# Source: nephele-uc1-inria-app/templates/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: pgadmin
---
# Source: nephele-uc1-inria-app/templates/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "inria-api"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "inria-api"
  template:
    metadata:
      labels:
        app: "inria-api"
    spec:
      containers:
      - name: "inria-api"
        image: "alivershem/nephele_uc1_inria:api-amd64"
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5001
---
# Source: nephele-uc1-inria-app/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:17.0-alpine3.20
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: db-data
            mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-pvc
---
# Source: nephele-uc1-inria-app/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "inria-front"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "inria-front"
  template:
    metadata:
      labels:
        app: "inria-front"
    spec:
      containers:
      - name: "inria-front"
        image: "alivershem/nephele_uc1_inria:front-amd64"
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
---
# Source: nephele-uc1-inria-app/templates/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      securityContext:  # NB: pgadmin runs with the user 5050 / group 5050
        runAsUser: 5050
        runAsGroup: 5050
        fsGroup: 5050
      containers:
      - name: pgadmin
        image: dpage/pgadmin4
        ports:
        - containerPort: 8888
        volumeMounts:
          - name: pgadmin-data
            mountPath: /var/lib/pgadmin
      volumes:
      - name: pgadmin-data
        persistentVolumeClaim:
          claimName: pgadmin-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inria-api-secure
spec:
  rules:
    - host: inria-api.nephele-project.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inria-api
                port:
                  number: 5001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inria-front-secure
spec:
  rules:
    - host: inria-front.nephele-project.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inria-front
                port:
                  number: 80
